<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeToolbar"
        android:title="@string/activity_main_title_settings_item"
        app:titleTextAppearance="@style/ToolBarTitleTextAppearance">

        <ImageView
            android:id="@+id/iv_toolbar_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_save"
            android:padding="4dp"
            android:src="@drawable/ic_save_light" />

    </Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_banknotes" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_settings_banknotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/SettingsTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_save_history" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <RadioGroup
                    android:id="@+id/rg_settings_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checkedButton="@id/rb_save_indefinitely"
                    tools:ignore="RtlSymmetry">

                    <RadioButton
                        android:id="@+id/rb_save_indefinitely"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_pro"
                        android:paddingStart="16dp"
                        android:text="@string/fragment_settings_indefinitely"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_save_fourteen_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_pro"
                        android:paddingStart="16dp"
                        android:text="@string/fragment_settings_in_fourteen_days"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_save_thirty_days"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_pro"
                        android:paddingStart="16dp"
                        android:text="@string/fragment_settings_in_thirty_days"
                        android:textSize="14sp" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/SettingsTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_keyboard_layout" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <RadioGroup
                    android:id="@+id/rg_settings_keyboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:checkedButton="@id/rb_phone_keyboard"
                    tools:ignore="RtlSymmetry">

                    <RadioButton
                        android:id="@+id/rb_phone_keyboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_pro"
                        android:paddingStart="16dp"
                        android:text="@string/fragment_settings_phone_keyboard"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_numpad_keyboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham_pro"
                        android:paddingStart="16dp"
                        android:text="@string/fragment_settings_numpad_keyboard"
                        android:textSize="14sp" />
                </RadioGroup>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/SettingsTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_display" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/gotham_pro"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/fragment_settings_display_off"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_settings_display"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/SettingsTitleTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_about_app" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_settings_feedback"
                        style="@style/SettingsDescriptionTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_settings_feedback" />

                    <TextView
                        android:id="@+id/tv_settings_github"
                        style="@style/SettingsDescriptionTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_settings_github" />

                    <TextView
                        android:id="@+id/tv_settings_rate_app"
                        style="@style/SettingsDescriptionTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_settings_rate_app" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_settings_versions"
                style="@style/SettingsDescriptionTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragment_settings_versions" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>