<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_calculator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/hsv_calculator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_calculator_banknotes_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="horizontal" >
        </LinearLayout>

    </HorizontalScrollView>
    
    <LinearLayout
        android:id="@+id/ll_calculator_control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_rect_round_8dp_white"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsv_calculator">

        <ImageView
            android:id="@+id/iv_calculator_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/content_description_arrow_back"
            android:padding="10dp"
            android:src="@drawable/ic_navigate_left" />

        <View
            android:layout_width="1dp"
            android:background="#4DB2B3CC"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_rect_round_8dp_white"
            android:backgroundTint="#e1f7e0"
            android:contentDescription="@string/content_description_arrow_back"
            android:padding="8dp"
            android:src="@drawable/ic_invoice"
            app:tint="#6edb69" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_calculator_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/gotham_pro"
                android:text="490000₽"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_calculator_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/gotham_pro"
                android:text="14985 шт."
                android:textColor="#b2b3cc"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:background="#4DB2B3CC"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/iv_calculator_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/content_description_arrow_next"
            android:padding="10dp"
            android:src="@drawable/ic_navigate_right" />


        <!--        -->

    </LinearLayout>

    <Button
        android:id="@+id/b_calculator_digit_0_0"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_1"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_1_0"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_0_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_calculator_control_panel" />

    <Button
        android:id="@+id/b_calculator_digit_0_1"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_2"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_1_1"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_0_2"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_0_0"
        app:layout_constraintTop_toBottomOf="@id/ll_calculator_control_panel" />

    <Button
        android:id="@+id/b_calculator_digit_0_2"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_3"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_1_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_0_1"
        app:layout_constraintTop_toBottomOf="@id/ll_calculator_control_panel" />

    <Button
        android:id="@+id/b_calculator_digit_1_0"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_4"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_2_0"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_1_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_0_0" />

    <Button
        android:id="@+id/b_calculator_digit_1_1"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_5"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_2_1"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_1_2"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_1_0"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_0_1" />

    <Button
        android:id="@+id/b_calculator_digit_1_2"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_6"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_1_1"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_0_2" />

    <Button
        android:id="@+id/b_calculator_digit_2_0"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_7"
        app:layout_constraintBottom_toTopOf="@id/iv_calculator_save"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_2_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_1_0" />

    <Button
        android:id="@+id/b_calculator_digit_2_1"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_8"
        app:layout_constraintBottom_toTopOf="@id/b_calculator_digit_3_1"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_2_2"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_2_0"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_1_1" />

    <Button
        android:id="@+id/b_calculator_digit_2_2"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_9"
        app:layout_constraintBottom_toTopOf="@id/iv_calculator_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_2_1"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_1_2" />

    <ImageView
        android:id="@+id/iv_calculator_save"
        style="@style/KeyboardImageTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_save"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/b_calculator_digit_3_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_2_0" />

    <Button
        android:id="@+id/b_calculator_digit_3_1"
        style="@style/KeyboardTextTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_calculator_delete"
        app:layout_constraintStart_toEndOf="@id/iv_calculator_save"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_2_1" />

    <ImageView
        android:id="@+id/iv_calculator_delete"
        style="@style/KeyboardImageTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_delete"
        android:src="@drawable/ic_backspace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b_calculator_digit_3_1"
        app:layout_constraintTop_toBottomOf="@id/b_calculator_digit_2_2" />

</androidx.constraintlayout.widget.ConstraintLayout>
